# math-rag-jupyter

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: publish.yml
isolated_jupyter_kernel/: main.py
isolated_jupyter_kernel/controllers/: jupyter_controller.py
isolated_jupyter_kernel/endpoints/: app.py
isolated_jupyter_kernel/requests/: __init__.py  execute_request.py
isolated_jupyter_kernel/sessions/: session_info.py  session_manager.py
jupyter/: main.py
jupyter/controllers/: __init__.py
jupyter/endpoints/: app.py
jupyter/sessions/: session_info.py
jupyter_api/: main.py
jupyter_api/endpoints/: app.py
jupyter_api/sessions/: __init__.py  session_info.py  session_manager.py
math_rag_jupyter/: main.py
math_rag_jupyter/endpoints/: app.py
math_rag_jupyter/sessions/: session_info.py
