[tool.poetry]
name = "isolated-jupyter-kernel"
version = "0.1.0"
description = ""
authors = ["Luka958Pixion <luka.panic@pixion.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
